<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Orchextra
  ~
  ~ Copyright (C) 2017 Gigigo Mobile Services SL
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<resources>
    <string name="app_title">Orchextra</string>
    <string name="status_running">running</string>
    <string name="status_text">Orchextra status: %s</string>
    <string name="status_stoped">stopped</string>
    <string name="title_activity_orchextra_demo">Orchextra Demo</string>
    <string name="title_settings">Settings</string>
    <string name="title_scanner">Camera</string>
    <string name="title_geofences">Geofence</string>
    <string name="title_triggers_log">Triggers</string>
    <string name="title_triggers_filter">Filters</string>

    <string name="open_orchextra_scanner">Orchextra scanner</string>
    <string name="open_custom_scanner">Custom scanner</string>
    <string name="open_image_recognition">Image recognition</string>
    <string name="scan_code">Scan code</string>
    <string name="start_orchextra">Start</string>
    <string name="finish_orchextra">Log out</string>

    <string name="custom_scanner_title">Custom scanner</string>

    <string name="trigger_date">Detected:</string>
    <string name="trigger_date_format">%1$tT - %1$te %1$tB %1$tY</string>
    <string name="date_format">%1$te %1$tB %1$tY</string>
    <string name="trigger_type">Type:</string>
    <string name="trigger_value">Value:</string>
    <string name="trigger_event">Event:</string>
    <string name="trigger_distance">Distance:</string>
    <string name="trigger_major">Major:</string>
    <string name="trigger_minor">Minor:</string>
    <string name="trigger_uuid">UUID:</string>

    <string name="apply_filter">Apply</string>


    <string name="project">Project</string>
    <string name="api_key">Api key</string>
    <string name="api_secret">Api secret</string>
    <string name="empty_list">Empty list</string>
    <string name="user">User</string>
    <string name="device">Device</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth date</string>
    <string name="tags">Tags</string>
    <string name="business_units">Business units</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="crm_id">CRM id</string>
    <string name="unbind">Unbind</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="launch_activity">Launch Activity</string>
    <string name="remove_location_updates">Remove location updates</string>
</resources>
