<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Orchextra
  ~
  ~ Copyright (C) 2016 Gigigo Mobile Services SL
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="gigigo.com.orchextrasdk.demo.ui.scanner.ScannerFragment"
    >

  <Button
      android:id="@+id/ox_scanner_button"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginTop="58dp"
      style="@style/ButtonStyle"
      android:text="@string/open_orchextra_scanner"
      />

  <Button
      android:id="@+id/ox_custom_scanner_button"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      style="@style/ButtonStyle"
      android:text="@string/open_custom_scanner"
      />

  <Button
      android:id="@+id/ox_image_recognition_button"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      style="@style/ButtonStyle"
      android:text="@string/open_image_recognition"
      />

</LinearLayout>
