<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Orchextra
  ~
  ~ Copyright (C) 2016 Gigigo Mobile Services SL
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="gigigo.com.orchextrasdk.login.LoginActivity"
    >

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="126dp"
      android:src="@drawable/logo"
      />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="40dp"
      android:layout_marginTop="7.5dp"
      android:gravity="center"
      android:textColor="@color/primary"
      android:textSize="38.6sp"
      android:text="@string/app_title"
      />

  <EditText
      android:id="@+id/projectName_editText"
      android:layout_width="match_parent"
      android:layout_height="46dp"
      android:layout_marginLeft="33dp"
      android:layout_marginRight="43dp"
      style="@style/EditTextStyle"
      android:enabled="false"
      />


  <EditText
      android:id="@+id/apiKey_editText"
      android:layout_width="match_parent"
      android:layout_height="46dp"
      android:layout_marginLeft="53dp"
      android:layout_marginRight="43dp"
      android:layout_marginTop="17dp"
      style="@style/EditTextStyle"
      android:hint="@string/api_key"
      />
  <EditText
      android:id="@+id/apiSecret_editText"
      android:layout_width="match_parent"
      android:layout_height="46dp"
      android:layout_marginLeft="53dp"
      android:layout_marginRight="43dp"
      android:layout_marginTop="15dp"
      style="@style/EditTextStyle"
      android:hint="@string/api_secret"
      />

  <Button
      android:id="@+id/start_button"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginBottom="40dp"
      android:layout_marginLeft="64dp"
      android:layout_marginRight="64dp"
      android:layout_marginTop="40dp"
      android:text="@string/start_orchextra"
      style="@style/ButtonLoginStyle"
      />

</LinearLayout>